fix(scrolling): fixes unintentionally scrollbars for static header approach

--- a/sdk/src/styling/base.scss
+++ b/sdk/src/styling/base.scss
@@ -105,10 +105,18 @@ table { width:auto; border-collapse: collapse;border-spacing: 0; }
     .cc-scroller--if-fixed{
         @extend %cc-scrollable-vertical;
     }
+
+    &.cc-scroller--if-fixed{
+        @extend %cc-scrollable-vertical;
+    }
 }
 
 .cc-no-position-fixed{
     .cc-scroller--if-no-fixed{
+        @extend %cc-scrollable-vertical;
+    }
+
+    &.cc-scroller--if-no-fixed{
         @extend %cc-scrollable-vertical;
     }
 }
